# python-dotjson

./: Dockerfile  GitVersion.yml  README.md  setup.py
.github/workflows/: build-pull.yml  build.yml  publish.yml
sample-settings/: settings.json
src/: pyproject.toml
src/tests/: test_dotjson.py
src/tests/sample-settings/: settings.dev.json
