[tool.poetry]
name = "dotjson"
version = "0.1.0"
description = ""
authors = ["Aakash Khanna <aakashkh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flatten-json = "^0.1.13"
pydantic = "^1.9.1"
pytest = "^7.1.2"
pytest-html-reporter = "^0.2.9"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
addopts = "/project/tests/ --cov=dotjson --cov-report=html:./report --html-report=./report"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
