[tool.poetry]
name = "dotjson"
version = "0.1.0"
description = ""
authors = ["Aakash Khanna <aakashkh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flatten-json = "^0.1.13"
pydantic = "^1.9.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.pytest.ini_options]
addopts = "/project/tests/ -rA tests --cov=dotjson"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
